# tas

./: .gitignore  Cargo.toml
src/: app.rs  model.rs  ui.rs
src/pages/: bestiary.rs  mod.rs  overview.rs  stubs.rs  universe_detail.rs  universe_list.rs
tas/: Cargo.toml
tas/migrations/: 20250101000000_add_the_forge.sql  20250101000000_initial_schema.sql  20250102000000_create_locations.sql  20250103000000_add_the_forge.sql  20251219_seed_bestiary.sql  v0001.sql  v0002.sql
tas/src/: app.rs  db.rs  db_migrations.rs  diag.rs  editors.rs  logger.rs  main.rs  messages.rs  model.rs  project_manager.rs  state.rs  ui.rs  ui_shell.rs
tas/src/controllers/: action_done_controller.rs  bestiary_controller.rs  db_controller.rs  locations_controller.rs  messages_controller.rs  mod.rs  pm_controller.rs  post_event_tasks_controller.rs  root_controller.rs  the_forge_controller.rs  timeline_controller.rs  ui_controller.rs  universe_controller.rs
tas/src/db_seed/: bestiary.rs  locations.rs  mod.rs  pm_tools.rs  timeline.rs
tas/src/pages/: bestiary.rs  launcher.rs  locations.rs  mod.rs  overview.rs  pm_board.rs  pm_list.rs  stubs.rs  the_forge.rs  timeline.rs  universe_detail.rs  universe_list.rs  workspaces.rs
